[project]
name = "londontube"
version = "0.1.0"

[project.scripts]
journey-planner = "londontube.command:main"

[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2", "wheel"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31"
pandas = "^2.1.1"
numpy = "^1.24.3"
pytest = "^7.4.3"

[tool.setuptools.packages.find]
include = ["londontube","londontube.*", "tests", "tests*"]
exclude = ["docs"]

