[project]
name = "londontube"
version = "0.1.0"
dependencies = [
    "requests>=2.31",
    "pandas>=2.0.0",
    "numpy>=1.24.3",
    "matplotlib>=3.8.1"
]

[project.optional-dependencies]
dev = [
    "commitizen>=3.13.0",
    "pytest>=7.4.4",
    "pytest-cov>=4.1.0"
]

[project.scripts]
journey-planner = "londontube.command:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["londontube", "londontube.*"]
exclude = ["tests", "tests*", "docs"]

[tool.coverage.run]
omit = [
    "*__init__.py",
    "tests/*"
]
